--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<p>some qrcode</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Restaurant Menu</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Our Menu</h1>
+    </header>
+    <main>
+        <div class="menu-image-container">
+            <img src="menu.jpg" alt="Restaurant Menu" class="menu-image">
+        </div>
+    </main>
+</body>
+</html>
