--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Restaurant Menu</title>
+    <title>Full-Screen Menu</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Our Menu</h1>
-    </header>
-    <main>
-        <div class="menu-image-container">
-            <img src="menu.jpg" alt="Restaurant Menu" class="menu-image">
-        </div>
-    </main>
+    <div class="menu-container">
+        <img src="menu.jpg" alt="Restaurant Menu" class="menu-image">
+    </div>
 </body>
 </html>
